fix: receieve amount from parent window

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ title: "Mock Payment Gateway"
     <hr class="bg-transparent h-1 border-t-2 mb-1.5 border-bg border-dashed" />
     <main class="bg-white py-3">
     <section class=" p-4 mb-1 text-center flex flex-col py-8 px-10 mx-9 border border-[#F1F1F1] rounded-[10px]">
-      <p class="text-4xl font-black tracking-[-1.6px]"><span class="text-[#535353]">₿</span> <span id="amount"></span>2.75</p>
+      <p class="text-4xl font-black tracking-[-1.6px]"><span class="text-[#535353]">₿</span> <span id="amount">2.75</span></p>
       <small class="text-[8px] text-[#D4D4D4] ml-[67%] flex items-center hover:cursor-pointer hover:underline">+fees 
         <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
           <g clip-path="url(#clip0_256_575)">
