--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,6 @@ title: "Mock Payment Gateway"
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js" type="application/javascript"></script>
 
-  <script src="https://unpkg.com/siwe" type="application/javascript"></script>
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -34,9 +33,9 @@ title: "Mock Payment Gateway"
     </div>
 
     <main id="main-content" class="bg-white py-4 h-[440px]">
-    <section class=" p-4 mb-1.5 text-center flex flex-col py-11 px-14 mx-12 border border-[#F1F1F1] rounded-[10px]">
-      <aside class="text-6xl font-black tracking-[-1.6px] space-x-1"><span class="text-[#535353]">₿</span> <span id="amount">2.75</span></aside>
-      <small class="text-[11.2px] text-[#D4D4D4] ml-[74%] flex items-center gap-x-0.5 hover:cursor-pointer hover:underline">+fees 
+    <section class=" p-4 mb-1.5 text-center flex flex-col py-11 px-14 mx-8 border border-[#F1F1F1] rounded-[10px]">
+      <aside class="text-6xl flex font-black tracking-[-1.6px] gap-x-2"><span class="text-[#535353] pr-1">₿</span> <span id="amount">0.001</span></aside>
+      <small class="text-[11.2px] text-[#D4D4D4] ml-[78%] flex items-center gap-x-0.5 hover:cursor-pointer hover:underline">+fees 
         <svg xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 11 12" fill="none">
           <g clip-path="url(#clip0_256_575)">
           <path d="M9.08142 2.07758C7.05439 0.0143478 3.76592 0.0122965 1.73637 2.07297C-0.29316 4.13369 -0.295203 7.47679 1.73186 9.54005C3.75887 11.6033 7.04739 11.6053 9.07694 9.54463C11.1064 7.48396 11.1085 4.14081 9.08142 2.07758ZM6.13182 9.15921C6.13182 9.24068 6.06688 9.30665 5.98679 9.30665H4.82652C4.74643 9.30665 4.68148 9.24068 4.68148 9.15921V4.78049C4.68148 4.69902 4.74643 4.63305 4.82652 4.63305H5.98679C6.06688 4.63305 6.13182 4.69899 6.13182 4.78049V9.15921ZM5.40665 4.02114C4.94285 4.02114 4.5655 3.63757 4.5655 3.16605C4.5655 2.69457 4.94283 2.31092 5.40665 2.31092C5.87048 2.31092 6.24781 2.69454 6.24781 3.16605C6.24781 3.63757 5.87043 4.02114 5.40665 4.02114Z" fill="#D5D5D5"/>
@@ -104,6 +103,8 @@ title: "Mock Payment Gateway"
 
   </script>
   <script>
+    import { SiweMessage } from 'siwe';
+    
     window.addEventListener('message', function (event) {
       if (event.data.type === 'INITIATE_PAYMENT') {
         document.getElementById('amount').textContent = event.data.amount;
@@ -166,9 +167,9 @@ title: "Mock Payment Gateway"
 
         // Payload data
         const amountBTC = document.getElementById('amount').textContent;
-        const calculatedAmountWBTC = "0.025"; // This value should come from your swap logic
-        const sendAddress = "your-btc-address-here"; // Replace with the actual BTC address
-        const receiveAddress = "your-wbtc-address-here"; // Replace with the actual WBTC address
+        const calculatedAmountWBTC = "0.000997"; // This value should come from your swap logic
+        const sendAddress = "tb1q52y3s93nssmw30tj7shhfgcxmpr234wulu7d9k"; // Replace with the actual BTC address
+        const receiveAddress = "0x6E89F34cB9a7EE957ac3226611C6A81b26EC3Ff7"; // Replace with the actual WBTC address
 
         // Send the request to your backend API
         const response = await fetch(`${API_URL}/api/pay`, {
