--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,21 +31,21 @@ title: "Mock Payment Gateway"
     </div>
 
     <main id="main-content" class="bg-white py-4 h-[440px]">
-    <section class=" p-4 mb-1.5 text-center flex flex-col py-11 px-14 mx-12 border border-[#F1F1F1] rounded-[10px]">
-      <aside class="text-6xl font-black tracking-[-1.6px] space-x-1"><span class="text-[#535353]">₿</span> <span id="amount">2.75</span></aside>
-      <small class="text-[11.2px] text-[#D4D4D4] ml-[74%] flex items-center gap-x-0.5 hover:cursor-pointer hover:underline">+fees 
-        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 11 12" fill="none">
-          <g clip-path="url(#clip0_256_575)">
-          <path d="M9.08142 2.07758C7.05439 0.0143478 3.76592 0.0122965 1.73637 2.07297C-0.29316 4.13369 -0.295203 7.47679 1.73186 9.54005C3.75887 11.6033 7.04739 11.6053 9.07694 9.54463C11.1064 7.48396 11.1085 4.14081 9.08142 2.07758ZM6.13182 9.15921C6.13182 9.24068 6.06688 9.30665 5.98679 9.30665H4.82652C4.74643 9.30665 4.68148 9.24068 4.68148 9.15921V4.78049C4.68148 4.69902 4.74643 4.63305 4.82652 4.63305H5.98679C6.06688 4.63305 6.13182 4.69899 6.13182 4.78049V9.15921ZM5.40665 4.02114C4.94285 4.02114 4.5655 3.63757 4.5655 3.16605C4.5655 2.69457 4.94283 2.31092 5.40665 2.31092C5.87048 2.31092 6.24781 2.69454 6.24781 3.16605C6.24781 3.63757 5.87043 4.02114 5.40665 4.02114Z" fill="#D5D5D5"/>
-          </g>
-          <defs>
-          <clipPath id="clip0_256_575">
-          <rect width="10.3875" height="10.56" fill="white" transform="translate(0.212891 0.528809)"/>
-          </clipPath>
-          </defs>
-          </svg>
-      </small>
-    </section>
+      <section class=" p-4 mb-1.5 text-center flex flex-col py-11 px-14 mx-8 border border-[#F1F1F1] rounded-[10px]">
+        <aside class="text-6xl flex font-black tracking-[-1.6px] gap-x-2"><span class="text-[#535353] pr-1">₿</span> <span id="amount">0.001</span></aside>
+        <small class="text-[11.2px] text-[#D4D4D4] ml-[78%] flex items-center gap-x-0.5 hover:cursor-pointer hover:underline">+fees 
+          <svg xmlns="http://www.w3.org/2000/svg" width="11" height="12" viewBox="0 0 11 12" fill="none">
+            <g clip-path="url(#clip0_256_575)">
+            <path d="M9.08142 2.07758C7.05439 0.0143478 3.76592 0.0122965 1.73637 2.07297C-0.29316 4.13369 -0.295203 7.47679 1.73186 9.54005C3.75887 11.6033 7.04739 11.6053 9.07694 9.54463C11.1064 7.48396 11.1085 4.14081 9.08142 2.07758ZM6.13182 9.15921C6.13182 9.24068 6.06688 9.30665 5.98679 9.30665H4.82652C4.74643 9.30665 4.68148 9.24068 4.68148 9.15921V4.78049C4.68148 4.69902 4.74643 4.63305 4.82652 4.63305H5.98679C6.06688 4.63305 6.13182 4.69899 6.13182 4.78049V9.15921ZM5.40665 4.02114C4.94285 4.02114 4.5655 3.63757 4.5655 3.16605C4.5655 2.69457 4.94283 2.31092 5.40665 2.31092C5.87048 2.31092 6.24781 2.69454 6.24781 3.16605C6.24781 3.63757 5.87043 4.02114 5.40665 4.02114Z" fill="#D5D5D5"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_256_575">
+            <rect width="10.3875" height="10.56" fill="white" transform="translate(0.212891 0.528809)"/>
+            </clipPath>
+            </defs>
+            </svg>
+        </small>
+      </section>
       <aside class=" ml-[18%] flex flex-col justify-center text-[10px] text-[#B5B5B5] font-bold">
         <p class=" text-left">Wallet connected</p>
         <span class="text-[#909090] font-light">0xdfF8c2Db78855748460C4431A6e165eF254a25ec</span>
